# moai-jni

./: .gitignore  CMakeLists.txt  easter.android.config
hosts/android/: easter.config
hosts/android/project/src/ch/levietba/sample/: MoaiActivity.java  MoaiView.java
hosts/android/project/src/org/keplerproject/luajava/: CPtr.java  LuaState.java
moai-jni/: CMakeLists.txt  JniDefs.h  host.cpp  host.h  luajava.c
plugins/moai-jni/: plugin.CMake
plugins/moai-jni/android/src/org/keplerproject/luajava/: LuaStateFactory.java
plugins/moai-jni/moai-jni/: CMakeLists.txt
sample/: easter.config
sample/hosts/android/: init.lua
sample/src/: main.lua
src/: main.lua
